--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,14 +33,27 @@
 }
 
 .carousel {
-  animation: to-let 5s linear infinite;
+  animation: to-let 50s linear infinite ;
+  animation-delay: 3s ;
 }
 
 @keyframes to-let {
   0% {
-    transform: translateX(0px);
+    transform: translateX(0%);
+  }
+  20% {
+    transform: translateX(-100%);
+  }
+  40% {
+    transform: translateX(-200%);
+  }
+  60% {
+    transform: translateX(-300%);
+  }
+  80% {
+    transform: translateX(-400%);
   }
   100% {
-    transform: translateX(-10000px);
+    transform: translateX(-500%);
   }
 }
